--- a/templates/room_temperatures.html
+++ b/templates/room_temperatures.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block head %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"> </script>
 <title>IoT Monitor</title>
 {% endblock %}
 
@@ -11,6 +12,7 @@
     {% if temperatures|length < 1 %}
     <h4>No temperatures available for this room</h4>
     {% else %}
+    <canvas class="container" id="myChart" style="width:100%;max-width:700px"></canvas>
     <table class="table styled-table">
         <thead>
             <tr>
@@ -32,10 +34,11 @@
     {% endif %}
 
     <div class="container">
-        <div class="form"></div>
+        <div style="align-items: right;">
+            Add new temperature datapoint 
             <form class="form" action="/temperature/{{ room_id }}/9999.9" method="POST"> 
                 <input class="add_text_input" type="number" step="any" name="temperature_value" id="temperature_value">
-                <input class="add_btn_input" type="submit" value="Add Temperature">
+                <input class="add_btn_input" type="submit" value="Add">
             </form>
         </div>
     </div>
@@ -44,4 +47,27 @@
         <a href="/rooms" class="btn btn-info">Back</a>
     </div>
 </div>
+
+<script>
+    var ctx = document.getElementById("myChart").getContext("2d");
+    var lineChart = new Chart(ctx, {
+      type: "line",
+      data: {
+        labels: {{ date_values | safe }},
+        datasets: [{
+          label: "Temperature",
+          pointRadius: 4,
+          pointBackgroundColor: "rgb(0,0,255)",
+          data: {{ temp_values | safe }}
+        }]
+      },
+      options: {
+        responsive: false,
+        legend: {display: false},
+        scales: {
+          yAxes: [{ticks: {min: 0, max:100}}],
+        }
+      }
+    });
+    </script>
 {% endblock %}
