--- a/templates/room_temperatures.html
+++ b/templates/room_temperatures.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
 
 {% block head %}
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"> </script>
 <title>IoT Monitor</title>
 {% endblock %}
 
@@ -12,7 +11,8 @@
     {% if temperatures|length < 1 %}
     <h4>No temperatures available for this room</h4>
     {% else %}
-    <canvas class="container" id="myChart" style="width:100%;max-width:700px"></canvas>
+    <!-- <canvas class="container" id="myChart" style="width:100%;max-width:700px"></canvas> -->
+    <div class="container" id="myChart" style="width:100%;max-width:700px"></div>
     <table class="table styled-table">
         <thead>
             <tr>
@@ -47,27 +47,9 @@
         <a href="/rooms" class="btn btn-info">Back</a>
     </div>
 </div>
-
-<script>
-    var ctx = document.getElementById("myChart").getContext("2d");
-    var lineChart = new Chart(ctx, {
-      type: "line",
-      data: {
-        labels: {{ date_values | safe }},
-        datasets: [{
-          label: "Temperature",
-          pointRadius: 4,
-          pointBackgroundColor: "rgb(0,0,255)",
-          data: {{ temp_values | safe }}
-        }]
-      },
-      options: {
-        responsive: false,
-        legend: {display: false},
-        scales: {
-          yAxes: [{ticks: {min: 0, max:100}}],
-        }
-      }
-    });
+<script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
+<script type="text/javascript">
+    var graphs = {{ graphJSON | safe }};
+    Plotly.plot('myChart',graphs,{});
     </script>
 {% endblock %}
